Added test column to appointments list

--- a/LMSoftware/LMS/Views/Patient/Details.cshtml
+++ b/LMSoftware/LMS/Views/Patient/Details.cshtml
@@ -21,12 +21,13 @@
                     <h4 class="card-title py-2">@Model.Fullname</h4>
                     <ul>
                         <li> <p class="card-text py-2"><span> <b>Age: </b></span> @Model.Age</p> </li>
-                        
+
                         <li> <p class="card-text py-2"><span> <b>Physician: </b></span> @Model.Physician.PhysicianName</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Clinical diagnosis: </b></span> @Model.ClinicalDiagnosis</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Department: </b></span> @Model.Department</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Date of request: </b></span> @Model.DateOfRequest</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Lab Number: </b></span> @Model.ClinicNo</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Test taken: </b></span> @Model.Test.TestName</p> </li>
                     </ul>
                 
 
