--- a/LMSoftware/LMS/Views/Patient/Create.cshtml
+++ b/LMSoftware/LMS/Views/Patient/Create.cshtml
@@ -39,14 +39,14 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div class="col-md-8">
                 <label asp-for="Department" class="col-md-8 control-label">Department</label>
 
                 <input asp-for="Department" class="form-control" />
                 <span asp-validation-for="Department" class="text-danger"></span>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-8">
