--- a/LMSoftware/LMS/Views/Register/EditApp.cshtml
+++ b/LMSoftware/LMS/Views/Register/EditApp.cshtml
@@ -111,17 +111,17 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     <div class="col-md-8">
                         <label asp-for="TestId" class="col-md-8 control-label">Test Required: </label>
                         <input asp-for="TestId" class="form-control" />
 
-                        @*<select asp-for="TestId" class="form-control" asp-items="@(new SelectList(Model.TestL, "Value", "Text"))">
-                </select>*@
+                        <select asp-for="TestId" class="form-control" asp-items="@(new SelectList(Model.TestL, "Value", "Text"))">
+                </select>
                         <span asp-validation-for="TestId" class="text-danger"></span>
                     </div>
                 </div>
-                <div asp-validation-summary="All" class="text-danger"></div>
+                <div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
 
                     <div class="btn-group col-md-offset-2 col-md-4">
