--- a/LMSoftware/LMS/Views/Test/TestDetails.cshtml
+++ b/LMSoftware/LMS/Views/Test/TestDetails.cshtml
@@ -6,7 +6,7 @@
 }
 
 @using LMS.Models
-@model PatientTest
+@model IEnumerable<PatientTest>
 
 
 <div class="container marginTop">
@@ -21,20 +21,20 @@
 
             <div class="card-block">
 
-                @*@foreach (var item in Model)
-                {*@
+                @foreach (var item in Model)
+                {
 
-                    <h4 class="card-title py-4">@Model.patients.Fullname</h4>
+                    <h4 class="card-title py-4">@item.patients.Fullname</h4>
                     <ul>
-                        <li> <p class="card-text py-2"><span> <b>Age: </b></span> @Model.patients.Age</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Age: </b></span> @item.patients.Age</p> </li>
 
-                        <li> <p class="card-text py-2"><span> <b>Physician: </b></span> @Model.patients.Physician</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Clinical diagnosis: </b></span> @Model.patients.ClinicalDiagnosis</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Department: </b></span> @Model.patients.Department</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Date of request: </b></span> @Model.patients.DateOfRequest</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Lab Number: </b></span> @Model.patients.ClinicNo</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Physician: </b></span> @item.patients.Physician</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Clinical diagnosis: </b></span> @item.patients.ClinicalDiagnosis</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Department: </b></span> @item.patients.Department</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Date of request: </b></span> @item.patients.DateOfRequest</p> </li>
+                        <li> <p class="card-text py-2"><span> <b>Lab Number: </b></span> @item.patients.ClinicNo</p> </li>
                     </ul>
-                
+                }
 
 
                 <p class="btn btn-group pull-right">
