Fixed the delete

--- a/LMSoftware/LMS/Views/Patient/Details.cshtml
+++ b/LMSoftware/LMS/Views/Patient/Details.cshtml
@@ -24,7 +24,7 @@
 
                         <li> <p class="card-text py-2"><span> <b>Physician: </b></span> @Model.Physician.PhysicianName</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Clinical diagnosis: </b></span> @Model.ClinicalDiagnosis</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Department: </b></span> @Model.Department</p> </li>
+                        @*<li> <p class="card-text py-2"><span> <b>Department: </b></span> @Model.Department</p> </li>*@
                         <li> <p class="card-text py-2"><span> <b>Date of request: </b></span> @Model.DateOfRequest</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Lab Number: </b></span> @Model.ClinicNo</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Test taken: </b></span> @Model.Test.TestName</p> </li>
