--- a/LMSoftware/LMS/Views/Test/TestDetails.cshtml
+++ b/LMSoftware/LMS/Views/Test/TestDetails.cshtml
@@ -30,7 +30,7 @@
 
                         <li> <p class="card-text py-2"><span> <b>Physician: </b></span> @item.patients.Physician</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Clinical diagnosis: </b></span> @item.patients.ClinicalDiagnosis</p> </li>
-                        <li> <p class="card-text py-2"><span> <b>Department: </b></span> @item.patients.Department</p> </li>
+                        @*<li> <p class="card-text py-2"><span> <b>Department: </b></span> @item.patients.Department</p> </li>*@
                         <li> <p class="card-text py-2"><span> <b>Date of request: </b></span> @item.patients.DateOfRequest</p> </li>
                         <li> <p class="card-text py-2"><span> <b>Lab Number: </b></span> @item.patients.ClinicNo</p> </li>
                     </ul>
