--- a/LMSoftware/LMS/Views/Patient/Edit.cshtml
+++ b/LMSoftware/LMS/Views/Patient/Edit.cshtml
@@ -31,13 +31,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Department" class="col-md-8 control-label">Department:</label>
                 <div class="col-md-8">
                     <input asp-for="Department" class="form-control" />
                     <span asp-validation-for="Department" class="text-danger"></span>
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <label asp-for="ClinicalDiagnosis" class="col-md-8 control-label">Clinical diagnosis:</label>
